--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -1,7 +1,12 @@
 @charset "UTF-8";
-
+@font-face {
+    font-family: 'GmarketSansMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 body{
-    padding-top:80px;
+    padding-top:70px;
 }
 ul{
     padding:0;
@@ -22,8 +27,15 @@ header a{
 header .navbar-brand{
     height:auto;
     padding:0;
+    padding-left:20px;
+}
+header .navbar-brand>img{
+	width:120px;
 }
 
+header nav .navbar-right{
+	margin-top:25px;
+}
 header nav .navbar-right.loginbtn{
     margin-right:0;
     font-size:14px;
@@ -32,13 +44,14 @@ header nav .navbar-right.loginbtn{
 header .navbar-nav{
     text-align:center;
     margin-left:50px;
-    margin-top:35px;
 }
 header .navbar-nav li{
     width:150px;
 }
 header .navbar-nav li a{
     transition:0.3s;
+    padding-top:25px;
+    padding-bottom:25px;
 }
 header .nav>li>a:hover, .nav>li>a:focus, .nav>li.on>a{    
     background-color:rgb(39, 83, 46);
@@ -46,7 +59,7 @@ header .nav>li>a:hover, .nav>li>a:focus, .nav>li.on>a{
 }
 header .navbar-nav li ul{
     position:absolute;
-    top:55px;
+    top:75px;
     left:0px;
     display:none;
     border-radius:5px;
