--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -5,6 +5,11 @@
     font-weight: normal;
     font-style: normal;
 }
+* {
+ 	font-family: 'GmarketSansMedium';
+ 	font-weight: normal;
+    font-style: normal;
+}
 body{
     padding-top:70px;
 }
