--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -169,7 +169,7 @@ header .dropdown.calicon .dropdown-menu{
     height:300px;
     margin:0 0 50px 0;
     background-image:url('../images/side_banner.jpg');
-    background-position: -74px 1155px;
+    background-position: center 1155px;
 }
 .pageTitle>div{   
     position:absolute;
