--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -164,7 +164,14 @@ header .dropdown.calicon .dropdown-menu{
     padding:20px 0;
 }
 .page_dir>button{
+	position: fixed;
+    top: 80px;
+    left: 20px;
+    width: 50px;
+    height: 50px;
+    z-index: 10;
     margin-right:10px;
+    border-radius: 50%;
 }
 .page_dir>button{    
     color:#fff;
