--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -11,7 +11,7 @@
     font-style: normal;
 }
 body{
-    padding-top:60px;
+    padding-top:70px;
 }
 ul{
     padding:0;
@@ -208,7 +208,9 @@ footer{
 }
 
 @media all and (max-width:760px){
-    
+    body{
+    	padding-top:62px;
+    }
     header nav{
         font-size:21px;
     }
@@ -266,6 +268,9 @@ footer{
     }
     header .dropdown.calicon img{
         width:100%;
+    }
+    #sideMenu{
+    	top:62px;
     }
     .page_dir{
     	text-align:center;
