--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -26,6 +26,9 @@ header nav{
     background-color :rgb(73, 124, 64);
     font-size:18px;
 }
+header nav .navbar-header{
+    height:70px;
+}
 header a{
     color:#fff;
 }
@@ -165,7 +168,7 @@ header .dropdown.calicon .dropdown-menu{
 }
 .page_dir>button{
 	position: fixed;
-    top: 80px;
+    top: 75px;
     left: 20px;
     width: 50px;
     height: 50px;
@@ -178,6 +181,10 @@ header .dropdown.calicon .dropdown-menu{
     transition:0.3s;
 	font-size:20px;
     color:#fff;
+}
+.page_dir>button>span{
+	font-size: 25px;
+	vertical-align: middle;
 }
 .page_dir>button:hover,.page_dir>button:focus{
     color:#fff;
@@ -208,9 +215,6 @@ footer{
 }
 
 @media all and (max-width:760px){
-    body{
-    	padding-top:62px;
-    }
     header nav{
         font-size:21px;
     }
